--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -1,5 +1,10 @@
-// h1,h2, h3, h4, h5, h6{
-//     font-family: $open-sans;
-//     font-weight: $regular;
-//     font-size: $medium;
-// }
+h1,h2, h3, h4, h5, h6{
+    font-family: $open-sans;
+    font-weight: 600;
+    color: $blue-charcoal;
+}
+p{
+    font-family: $open-sans;
+    font-weight: $weight-regular;
+    color: $gray;
+}
